<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guill.petagram.menu.ActivityContactar">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar"
        ></include>

    <TextView
        android:id="@+id/tvContacto"
        android:text="@string/contacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/miActionBar"
        android:textSize="@dimen/contacto_tam"
        android:layout_centerHorizontal="true"
        />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvContacto"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introducenombre" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_nombre"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_mensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mensaje"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar_comentario"
        android:layout_below="@+id/layout_mensaje"
        android:theme="@style/BotonRaised"
        />

</RelativeLayout>
